--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.1",
+        "ziggy-js": "^2.2.1",
         "zod": "^3.23.8"
     }
 }
