--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+STRIPE_KEY=
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
+
+STRIPE_PRODUCT_ID=
+STRIPE_PRICE_ID=
